# Harmodel

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: client_usage.py  example.har  usage_example.py
harmodel/: __init__.py  client.py  models.py  reader.py
tests/: __init__.py  test_client.py  test_integration.py  test_models.py  test_reader.py
